syntax = "proto3";

package employee;

import "scalapb/scalapb.proto";
import "google/protobuf/wrappers.proto";
import "example/enums.proto";

option java_package = "com.example";

message UserPersonalData {
    option (enums.message).foo = FOO_TWO;
    option (enums.message).bar = BAR_ONE;
    google.protobuf.StringValue first_name = 1;
    google.protobuf.StringValue last_name = 2;
}

